I've done mentor's marks

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -183,7 +183,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -193,7 +193,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -203,7 +203,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -227,7 +227,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -237,7 +237,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -247,7 +247,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -257,7 +257,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -281,7 +281,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -291,7 +291,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -301,7 +301,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -311,7 +311,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -337,7 +337,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -347,7 +347,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -357,7 +357,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -367,7 +367,7 @@
                   <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link soc-link link"
+                      class="member-soc-link soc-link link outline-remover"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                       ><svg class="member-soc-icon soc-icon" width="20" height="20">
@@ -388,7 +388,7 @@
             <li class="regularclients-item">
               <a
                 href=""
-                class="regularclients-link link"
+                class="regularclients-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -400,7 +400,7 @@
             <li class="regularclients-item">
               <a
                 href=""
-                class="regularclients-link link"
+                class="regularclients-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -412,7 +412,7 @@
             <li class="regularclients-item" width="106" height="60">
               <a
                 href=""
-                class="regularclients-link link"
+                class="regularclients-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -424,7 +424,7 @@
             <li class="regularclients-item">
               <a
                 href=""
-                class="regularclients-link link"
+                class="regularclients-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -436,7 +436,7 @@
             <li class="regularclients-item">
               <a
                 href=""
-                class="regularclients-link link"
+                class="regularclients-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -448,7 +448,7 @@
             <li class="regularclients-item">
               <a
                 href=""
-                class="regularclients-link link"
+                class="regularclients-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -471,7 +471,7 @@
             <ul class="footer-address-list list">
               <li>
                 <a
-                  class="footer-address-item map-position link"
+                  class="footer-address-item map-position link outline-remover"
                   href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -480,12 +480,14 @@
                 </a>
               </li>
               <li>
-                <a class="footer-address-item link" href="mailto:info@devstudio.com"
+                <a class="footer-address-item link outline-remover" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="footer-address-item link outline-remover" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
@@ -496,7 +498,7 @@
             <li class="footer-soc-item soc-item">
               <a
                 href=""
-                class="footer-soc-link soc-link link"
+                class="footer-soc-link soc-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 ><svg class="footer-soc-icon soc-icon" width="20" height="20">
@@ -506,7 +508,7 @@
             <li class="footer-soc-item soc-item">
               <a
                 href=""
-                class="footer-soc-link soc-link link"
+                class="footer-soc-link soc-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 ><svg class="footer-soc-icon soc-icon" width="20" height="20">
@@ -516,7 +518,7 @@
             <li class="footer-soc-item soc-item">
               <a
                 href=""
-                class="footer-soc-link soc-link link"
+                class="footer-soc-link soc-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 ><svg class="footer-soc-icon soc-icon" width="20" height="20">
@@ -526,7 +528,7 @@
             <li class="footer-soc-item soc-item">
               <a
                 href=""
-                class="footer-soc-link soc-link link"
+                class="footer-soc-link soc-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 ><svg class="footer-soc-icon soc-icon" width="20" height="20">
