--- a/portfolio.html
+++ b/portfolio.html
@@ -64,24 +64,24 @@
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="filter-list list">
             <li class="filter-item">
-              <button class="filter-btn btn" type="button">Усі</button>
+              <button class="filter-btn outline-remover" type="button">Усі</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn btn" type="button">Веб-сайти</button>
+              <button class="filter-btn outline-remover" type="button">Веб-сайти</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn btn" type="button">Додатки</button>
+              <button class="filter-btn outline-remover" type="button">Додатки</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn btn" type="button">Дизайн</button>
+              <button class="filter-btn outline-remover" type="button">Дизайн</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn btn" type="button">Маркетинг</button>
+              <button class="filter-btn outline-remover" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="portfolio-list list">
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img
                   src="./images/portfolio-img-1.jpg"
                   alt="демонстрація сайту на ноутбуці"
@@ -95,7 +95,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img
                   src="./images/portfolio-img-2.jpg"
                   alt="постер команди"
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img
                   src="./images/portfolio-img-3.jpg"
                   alt="логотип ресторану"
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img src="./images/portfolio-img-4.jpg" alt="навушники" width="370" height="294" />
                 <div class="portfolio-card-description">
                   <h2 class="portfolio-card-title title">Проєкт <span lang="en">Prime</span></h2>
@@ -136,7 +136,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img
                   src="./images/portfolio-img-5.jpg"
                   alt="дві коробки"
@@ -150,7 +150,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img
                   src="./images/portfolio-img-6.jpg"
                   alt="демонстрація сайту на екрані компʼютера"
@@ -166,7 +166,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img
                   src="./images/portfolio-img-7.jpg"
                   alt="розгорнутий журнал"
@@ -180,7 +180,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img
                   src="./images/portfolio-img-8.jpg"
                   alt="бейдж з картону"
@@ -194,7 +194,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a href="" class="portfolio-card-link link">
+              <a href="" class="portfolio-card-link link outline-remover">
                 <img
                   src="./images/portfolio-img-9.jpg"
                   alt="демонстрація додатку на ноутбуці"
@@ -223,7 +223,7 @@
             <ul class="footer-address-list list">
               <li>
                 <a
-                  class="footer-address-item map-position link"
+                  class="footer-address-item map-position link outline-remover"
                   href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -232,12 +232,14 @@
                 </a>
               </li>
               <li>
-                <a class="footer-address-item link" href="mailto:info@devstudio.com"
+                <a class="footer-address-item link outline-remover" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="footer-address-item link outline-remover" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
@@ -248,7 +250,7 @@
             <li class="footer-soc-item soc-item">
               <a
                 href=""
-                class="footer-soc-link soc-link link"
+                class="footer-soc-link soc-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 ><svg class="footer-soc-icon soc-icon" width="20" height="20">
@@ -258,7 +260,7 @@
             <li class="footer-soc-item soc-item">
               <a
                 href=""
-                class="footer-soc-link soc-link link"
+                class="footer-soc-link soc-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 ><svg class="footer-soc-icon soc-icon" width="20" height="20">
@@ -268,7 +270,7 @@
             <li class="footer-soc-item soc-item">
               <a
                 href=""
-                class="footer-soc-link soc-link link"
+                class="footer-soc-link soc-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 ><svg class="footer-soc-icon soc-icon" width="20" height="20">
@@ -278,7 +280,7 @@
             <li class="footer-soc-item soc-item">
               <a
                 href=""
-                class="footer-soc-link soc-link link"
+                class="footer-soc-link soc-link link outline-remover"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 ><svg class="footer-soc-icon soc-icon" width="20" height="20">
